--- a/backend/package.json
+++ b/backend/package.json
@@ -5,18 +5,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node-modules src/server.ts"
+    "dev": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.6.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.20",
     "prisma": "^4.6.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "sqlite3": "^5.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
